--- a/config/database.yml
+++ b/config/database.yml
@@ -14,12 +14,12 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: 12345
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
-  database: MeetScheduler_development
+  database: meet_scheduler_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
